fix(ui): resolve main content width issue on mobile screens

--- a/static/css/base/responsive.css
+++ b/static/css/base/responsive.css
@@ -33,9 +33,13 @@
         display: block;
     }
 
-    /* .content-section{
-        margin-bottom: 2000px !important;
-    } */
+    #sidebar-wrapper{
+        display: none;
+    }
+
+    footer{
+        left: 0;
+    }
 }
 
 
